feat: auto-create new todo when empty, fix default title, fix text display width

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <main>
     <section id="mainView" class="view active">
-      <div id="topCard" class="card placeholder">No todos yet. Add one!</div>
+      <div id="topCard" class="card placeholder">(No todos) What do you want to do?</div>
     </section>
 
     <section id="listView" class="view">
