feat: add tooltip to 'add' button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
   </main>
 
-  <button id="addButton" class="add-button" aria-label="Add todo">+</button>
+  <button id="addButton" title="Add Todo" class="add-button" aria-label="Add todo">+</button>
 
   <dialog id="modal" class="modal">
     <form method="dialog" class="modal-content">
